crates/credential/tests/probes/cred_attr_continue_resolve_without_pending.stderr
error: `fn continue_resolve` requires a `type Pending = …;` (the Interactive capability needs its typed pending state)
  --> tests/probes/cred_attr_continue_resolve_without_pending.rs:19:6
   |
19 | impl Bad {
   |      ^^^
